force-app/main/default/objects/Bypass_Settings__c/Bypass_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Allows to bypass configured automations (workflow rules, validation rules) through use of checkboxes</description>
    <label>Bypass Settings</label>
</CustomObject>