force-app/main/default/objects/Bypass_Settings__c/fields/Bypass_Flow_Rules__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Flow_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Flow Rules</label>
    <type>Checkbox</type>
</CustomField>