force-app/main/default/objects/Bypass_Settings__c/fields/Bypass_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specify if validation rules should be bypassed. Created as part of YODA</description>
    <inlineHelpText>Set this checkbox to true if the user/profile should not have any validation rule run</inlineHelpText>
    <label>Bypass Validation Rules</label>
    <type>Checkbox</type>
</CustomField>