force-app/main/default/objects/Bypass_Settings__c/fields/Bypass_Workflow_Rules__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Workflow_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specify if validation rules should be bypassed. Created as part of YODA</description>
    <inlineHelpText>Set this checkbox to true if the workflow rules should not run for a given user/profile</inlineHelpText>
    <label>Bypass Workflow Rules</label>
    <type>Checkbox</type>
</CustomField>